2016-08-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/57326
	* gcc.dg/tree-ssa/ssa-pre-32.c: New testcase.
	* gcc.dg/tree-ssa/loadpre14.c: Adjust.
	* gcc.dg/tree-ssa/pr35287.c: Likewise.
	* gcc.target/i386/pr45685.c: Likewise.
	* gcc.dg/tree-ssa/predcom-1.c: Disable PRE.
	* gcc.dg/tree-ssa/predcom-2.c: Likewise.
	* gcc.dg/tree-ssa/predcom-3.c: Likewise.
	* gcc.dg/tree-ssa/ssa-sink-10.c: Likewise.
	* gfortran.dg/pr34163.f90: Likewise.

2016-08-12  Martin Liska  <mliska@suse.cz>

	* g++.dg/gcov/gcov-16.C: New test.
	* lib/gcov.exp: Support new argument for run-gcov function.

2016-08-12  Martin Liska  <mliska@suse.cz>

	PR gcov-profile/35590
	* gcc.dg/tree-prof/val-prof-7.c: Improve test coverage.

2016-08-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/72851
	* gcc.dg/torture/pr72851.c: New testcase.

2016-08-12  Alexandre Oliva <aoliva@redhat.com>

	PR debug/63240
	* g++.dg/debug/dwarf2/defaulted-member-function-1.C: New.
	* g++.dg/debug/dwarf2/defaulted-member-function-2.C: New.
	* g++.dg/debug/dwarf2/defaulted-member-function-3.C: New.
	* g++.dg/debug/dwarf2/deleted-member-function.C: Expect
	DW_AT_deleted.

	PR debug/55641
	* g++.dg/debug/dwarf2/ref-1.C: New.

	PR debug/49366
	* g++.dg/debug/dwarf2/template-params-12.H: New.
	* g++.dg/debug/dwarf2/template-params-12f.C: New.
	* g++.dg/debug/dwarf2/template-params-12g.C: New.
	* g++.dg/debug/dwarf2/template-params-12n.C: New.
	* g++.dg/debug/dwarf2/template-params-12s.C: New.
	* g++.dg/debug/dwarf2/template-params-12u.C: New.
	* g++.dg/debug/dwarf2/template-params-12v.C: New.
	* g++.dg/debug/dwarf2/template-params-12w.C: New.

2016-08-11  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/72863
	* gcc.target/powerpc/pr72863.c: New test.

2016-08-11  Uros Bizjak  <ubizjak@gmail.com>

	* g++.dg/cpp1z/constexpr-lambda6.C: Remove dg-do run.

2015-08-11  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/pieces-strcpy-1.c: New test.
	* gcc.target/i386/pieces-strcpy-2.c: Likewise.
